[package]
name = "phoronix-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
reqwest = { version = "0.11.22", features = ["blocking"] }
select = "0.6.0"
termcolor = "1.3.0"
textwrap = "0.16.0"
